Make Build pass on Java 12 and add Java 12 build to Travis